Fix alignments

--- a/packages/editor/src/components/post-schedule/style.scss
+++ b/packages/editor/src/components/post-schedule/style.scss
@@ -16,4 +16,5 @@
 	text-align: left;
 	white-space: unset;
 	height: auto;
+	padding: 10px 12px;
 }
